--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "native": "node server.js",
-    "start": "nodemon server.js"
+    "start": "pm2 start server.js"
   },
   "keywords": [],
   "author": "Xela Oladipupo",
@@ -23,6 +23,7 @@
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
+    "pm2": "^5.4.1",
     "prettier": "^3.3.2",
     "socket.io": "^4.7.5"
   }
